// Copyright (c) 2020, RTE (http://www.rte-france.com)
//
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at http://mozilla.org/MPL/2.0/.

= Version SNAPSHOT

== Issues

* [OC-876] User Service : Implement group in JWT Token Option
* [OC-402] As an Operator I want the archive screen to display an explicit message if no cards are found that match my filters

== Bugs
* [OC-772] Bug on archives screen: clear results when exiting archive page.

== Tasks

* [OC-892] Add in documentation that it is not possible to use dot in json field names 
* [OC-888] Fix SonarCloud Frontend issues
* [OC-692] Fix SonarCloud Backend issues 




