@@ -70,7 +70,6 @@ public class CardConsultationData implements Card {
     private Object data;
     @Indexed
     private int shardKey;
-    private String mainRecipient;
     @JsonInclude(JsonInclude.Include.NON_EMPTY)
     @Singular
     private List<String> userRecipients;
