@@ -165,7 +165,6 @@ export function getOneRandomLightCard(lightCardTemplate?:any): LightCard {
         lightCardTemplate.endDate?lightCardTemplate.endDate:startTime + generateRandomPositiveIntegerWithinRangeWithOneAsMinimum(3455),
         lightCardTemplate.severity?lightCardTemplate.severity:getRandomSeverity(),
         getRandomAlphanumericValue(3, 24),
-        getRandomAlphanumericValue(3, 24),
         lightCardTemplate.lttd?lightCardTemplate.lttd:generateRandomPositiveIntegerWithinRangeWithOneAsMinimum(4654, 5666),
         getRandomI18nData(),
         getRandomI18nData(),
@@ -207,7 +206,6 @@ export function getOneRandomCard(cardTemplate?:any): Card {
         cardTemplate.startDate? cardTemplate.startDate:startTime,
         cardTemplate.endDate?cardTemplate.endDate:startTime + generateRandomPositiveIntegerWithinRangeWithOneAsMinimum(3455),
         cardTemplate.severity?cardTemplate.severity:getRandomSeverity(),
-        getRandomAlphanumericValue(3, 24),
         cardTemplate.process?cardTemplate.process:getRandomAlphanumericValue(3, 24),
         cardTemplate.processId?cardTemplate.processId:getRandomAlphanumericValue(3, 24),
         cardTemplate.state?cardTemplate.state:getRandomAlphanumericValue(3, 24),
